// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tickers should render correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 4,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 4,
      },
      {},
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        },
        {
          "alignItems": "flex-start",
          "flexDirection": "column",
          "gap": 0,
        },
      ]
    }
  >
    <PeachText
      style={
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        }
      }
    >
      1 BTC
    </PeachText>
    <PriceFormat
      amount={400000}
      currency="EUR"
      round={true}
      style={
        [
          {
            "lineHeight": 28,
          },
          {
            "color": "#F56522",
          },
          {},
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        },
        {
          "alignItems": "flex-start",
          "flexDirection": "column",
          "gap": 0,
        },
        {},
      ]
    }
  >
    <PeachText
      style={
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      1 EUR
    </PeachText>
    <PeachText
      style={
        [
          {
            "lineHeight": 28,
          },
          {
            "color": "#F56522",
          },
          {},
          {
            "textAlign": "right",
          },
        ]
      }
    >
      250 sats
    </PeachText>
  </View>
</View>
`;

exports[`Tickers should render correctly if the currency is CHF 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 4,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 4,
      },
      {
        "paddingBottom": 2,
        "paddingLeft": 32,
        "paddingRight": 32,
        "paddingTop": 2,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        },
        {
          "alignItems": "flex-start",
          "flexDirection": "column",
          "gap": 0,
        },
      ]
    }
  >
    <PeachText
      style={
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        }
      }
    >
      1 BTC
    </PeachText>
    <PriceFormat
      amount={400000}
      currency="CHF"
      round={true}
      style={
        [
          {
            "lineHeight": 28,
          },
          {
            "color": "#F56522",
          },
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 28,
          },
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        },
        {
          "alignItems": "flex-start",
          "flexDirection": "column",
          "gap": 0,
        },
        {
          "alignItems": "flex-end",
        },
      ]
    }
  >
    <PeachText
      style={
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      1 CHF
    </PeachText>
    <PeachText
      style={
        [
          {
            "lineHeight": 28,
          },
          {
            "color": "#F56522",
          },
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 28,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      250 sats
    </PeachText>
  </View>
</View>
`;

exports[`Tickers should render medium screens correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 4,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 4,
      },
      {
        "paddingBottom": 2,
        "paddingLeft": 32,
        "paddingRight": 32,
        "paddingTop": 2,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        },
        {
          "alignItems": "flex-start",
          "flexDirection": "column",
          "gap": 0,
        },
      ]
    }
  >
    <PeachText
      style={
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        }
      }
    >
      1 BTC
    </PeachText>
    <PriceFormat
      amount={400000}
      currency="EUR"
      round={true}
      style={
        [
          {
            "lineHeight": 28,
          },
          {
            "color": "#F56522",
          },
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 28,
          },
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        },
        {
          "alignItems": "flex-start",
          "flexDirection": "column",
          "gap": 0,
        },
        {
          "alignItems": "flex-end",
        },
      ]
    }
  >
    <PeachText
      style={
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      1 EUR
    </PeachText>
    <PeachText
      style={
        [
          {
            "lineHeight": 28,
          },
          {
            "color": "#F56522",
          },
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 28,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      250 sats
    </PeachText>
  </View>
</View>
`;
